--- a/style.css
+++ b/style.css
@@ -3,33 +3,33 @@ body, html {
   padding: 0;
   font-family: sans-serif;
 }
-
-h1 {
-  margin: 0;
-  text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  font-weight: 400;
-  width: 100%;
-  background-color: #87A6AB;
-  color: #F7F7F7;
+#calculator-container{
+  border-radius: 5px;
+  margin: 10px auto;
+  width: 920px;
 }
-
-.container {
-  max-width: 900px;
-  margin: 0 auto;
-  height: 600px;
-  background-color: #E3E4DE;
+h1 {
+    margin: 0;
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    font-weight: 300;
+    width: 100%;
+    background-color: #a2efce;
+    color: black;
 }
 
 table {
   border-collapse: collapse;
-  width: 100%;
+  min-width: 860px;
+  margin: 0 20px;
+  
 }
 
 th, td {
   text-align: left;
   padding: 8px;
+  padding-left: 25px;
 }
 
 tr:nth-child(even){
@@ -37,13 +37,31 @@ tr:nth-child(even){
 }
 
 th {
-  background-color: #2C3852;
-  color: white;
+  background-color: #2e285e;
+  color: #eaeaea;
   font-size: 18px;
+  font-weight: 300;
 }
 
 h2{
     margin-left: 20px;
+    font-weight: 300;
+}
+
+.total-container{
+  width: 880px;
+  display: flex;
+  justify-content: flex-end;
+}
+h3{
+    margin-right: 5px;
+    padding: 8px;
+}
+
+.input-container{
+  width: 880px;
+  display: flex;
+  justify-content: space-between;
 }
 input {
     margin: 5px;
@@ -54,19 +72,32 @@ input {
     margin-left: 20px;
 }
 
+.submit-button-container{
+  width: 880px;
+  display: flex;
+  justify-content: flex-end
+}
+
+#submitBtn{
+ margin-right: 5px;
+ padding: 10px 18px;
+}
+
 button {
   margin: 20px;
-  background-color: #2C3852; /* Green */
+  background-color: #2e285e;
   border: none;
-  color: white;
+  color: #eaeaea;
   padding: 8px 14px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   cursor: pointer;
+  border-radius: 30px;
 }
 
 .red {
     background-color: red;
+    border-radius: 5px;
 }
